# Nettacker

./: .bounty_pr.json  .coderabbit.yaml  .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  ADOPTERS.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_IMPLEMENTATION.md  Dockerfile  ENHANCEMENT_DOCUMENTATION.md  EXTERNAL_LIBRARIES_LICENSES.md  IMPLEMENTATION_REPORT.md  ISSUE_1230_FIX_SUMMARY.md  ISSUE_TEMPLATE.md  Makefile  Modules.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  VALIDATION_REPORT.md  bject {  comprehensive_dsl_test.py  config.py  console  debug_dsl.py  debug_flow.py  debug_multiple.py  debug_nginx.py  debug_operators.py  docker-compose.yml  engine.py  fi.txt  fix_cve_profiles.py  logger.py  logo.txt  (+38 more)
.data/: readme.md
.data/bitnami/: readme.md
.data/db/: readme.md
.data/results/: readme.md
.data/tmp/: readme.md
.github/: CODEOWNERS  COVERAGE.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: CI.yml  check-pr-issue-skip-usernames.txt  check-pr-issue.yaml  ci_cd.yml  codeql-analysis.yml  codeql.yml  lint.yml  publish_docker_image.yml  pypi_publish.yml  python-flake8.yml
.nettacker/: README.md
OWASP_Nettacker.egg-info/: PKG-INFO  requires.txt  top_level.txt
api/: __database.py  __start_scan.py  api_core.py  database.sqlite3  engine.py  readme.md  routes.py  start_scan.py
benchmarks/: performance_comparison.py
core/: __init__.py  _die.py  _time.py  alert.py  arg_parser.py  args_loader.py  attack.py  color.py  compatible.py  config.py  config_builder.py  conn.py  decor.py  decorators.py  die.py  dsl_matcher.py  events.py  get_input.py  get_range.py  graph.py  input_type.py  ip.py  languages.py  load_modules.py  log.py  messages.py  parse.py  readme.md  scan_targers.py  scan_targets.py  socks_proxy.py  start.py  targets.py  template.py  time.py  update.py  utility.py  wizard.py
core/lib/: ftp.py  ftps.py  ssl.py
core/module_protocols/: Mysql.py  core_Mysql.py  core_exec.py  core_http.py  core_imap.py  core_mysql.py  core_pop3.py  core_ssh.py  core_telnet.py  ftp.py  http.py  pop3.py  smb.py  smtp.py  socket.py  ssh.py  telnet.py
database/: config.py  connector.py  create.py  datatypes.py  db.py  models.py  mysql_create.py  postgres_create.py  readme.md  sqlite_create.py
docs/: API.md  CodebaseOverview.md  Contributors.md  DSL_MATCHING.md  Developers.md  Events.md  External_Services.md  Home.md  Installation.md  Instructions-for-the-OWASP-Bay-Area-tutorial.md  Media.md  Modules.md  README.md  RUNBOOK-pqc-compliance-scanner.md  Usage.md  index.md  requirements.txt
knowledge/instructions/: nettacker_path_fixes_implementation_plan.md
lib/argparse/: __init__.py  argparse_v2.py  argparse_v3.py  readme.md
lib/brute/: readme.md
lib/compare_report/: engine.py
lib/d3/: sample.html  sample.py
lib/html_log/: _log_data.py  log_data.py
lib/http_fuzzer/: directoryListing.txt  directory_listing.txt  engine.py  readme.md  user_agent_wordlist.txt
lib/icmp/: engine.py  readme.md
lib/jit/: README.md  jit-yc.js  sample.html
lib/language/: messages_ar.py  messages_ar.xml  messages_de.py  messages_de.xml  messages_el.py  messages_el.xml  messages_en.py  messages_en.xml  messages_es.py  messages_es.xml  messages_fa.py  messages_fa.xml  messages_fr.py  messages_fr.xml  messages_hi.py  messages_hi.xml  messages_hy.py  messages_hy.xml  messages_id.py  messages_id.xml  messages_it.py  messages_it.xml  messages_iw.py  messages_ja.py  messages_ja.xml  messages_ko.py  messages_ko.xml  messages_nl.py  messages_nl.xml  messages_ps.py  messages_ps.xml  messages_pt-br.py  messages_ru.py  messages_ru.xml  messages_tr.py  messages_tr.xml  messages_ur.py  messages_ur.xml  messages_vi.py  messages_vi.xml  (+3 more)
lib/messages/: ar.yaml  bn.yaml  de.yaml  el.yaml  en.yaml  es.yaml  fa.yaml  fr.yaml  hi.yaml  hy.yaml  id.yaml  it.yaml  iw.yaml  ja.yaml  ko.yaml  nl.yaml  ps.yaml  readme.md  ru.yaml  tr.yaml  ur.yaml  vi.yaml  zh-cn.yaml
lib/payload/: password_list_generator.py  readme.md
lib/scan/: engine.py  readme.md
lib/socks_resolver/: engine.py  readme.md
lib/threads_counter/: __init__.py
lib/transactions/: readme.md
lib/vuln/: readme.md
locale/: de.yaml  fr.yaml  hi.yaml  hy.yaml  ps.yaml  pt-br.yaml  ru.yaml  vi.yaml
modules/brute/: Mysql.yaml  ftp.yaml  ftps.yaml  imap.yaml  mysql.yaml  pop3.yaml  smb.yaml  smtps.yaml  ssh.yaml  telnet.yaml
modules/category_name_1/: http_sample_1.yaml  socket_sample_1.yaml
modules/category_name_2/: http_socket_mix_sample_1.yaml
modules/scan/: admin.yaml  citrix_lastpatcheddate.yaml  cms_detection.yaml  config_file.yaml  dir.yaml  drupal_modules.yaml  drupal_theme.yaml  drupal_version.yaml  http_html_title.yaml  http_status.yaml  icmp.yaml  ivanti_csa_lastpatcheddate.yaml  ivanti_epmm_lastpatcheddate.yaml  ivanti_ics_lastpatcheddate.yaml  joomla_template.yaml  joomla_user_enum.yaml  joomla_version.yaml  moveit_version.yaml  pma.yaml  port.yaml  ssl_certificate_information.yaml  ssl_expiring_certificate.yaml  ssl_insecure_cipher_suites.yaml  ssl_soon_to_expire_certificate.yaml  ssl_untrusted_certificate.yaml  ssl_weak_cipher_suites.yaml  subdomain.yaml  viewdns_reverse_iplookup.yaml  waf.yaml  web_technologies.yaml  wordpress_version.yaml  wp_plugin.yaml  wp_theme.yaml  wp_timethumbs.yaml
modules/vuln/: accela_cve_2021_34370.yaml  adobe_coldfusion_cve_2023_26360.yaml  apache_cve_2021_41773.yaml  apache_cve_2021_42013.yaml  apache_cve_2024_example_dsl.yaml  apache_ofbiz_cve_2024_38856.yaml  graphql.yaml  (+67 more)
nettacker/: .gitignore  __init__.py  config.py  environment.py  release_name.txt  version.py
scripts/: __travis_test__.py  nettacker  nettacker.bat  readme.md
tests/: __init__.py  common.py  conftest.py  readme.md  test_clickjacking.py  test_common.py  test_crlf.py  test_dsl_matcher.py  test_endpoint_ext.py  test_ip.py  test_logger.py  test_main.py  test_shodan.py  test_wayback.py  test_yaml_regexes.py  test_yaml_schema_and_regex.py  test_yaml_syntax.py
tmp/: readme.md
tools/: dsl_builder.py
web/: readme.md
(+858 files in other folders)
