[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nettacker"
version = "0.0.3"
description = "Automated Penetration Testing Framework - Open-Source Vulnerability Scanner - Vulnerability Management"
readme = "README.md"
requires-python = ">=3.0"
license = {text = "Apache License 2.0"}
dependencies = [
    "argparse==1.4.0",
    "netaddr==0.8.0",
    "ipaddr==2.2.0",
    "requests==2.28.1",
    "aiohttp==3.8.3",
    "asyncio==3.4.3",
    "paramiko==2.12.0",
    "texttable==1.6.7",
    "PySocks==1.7.1" ,
    "pyOpenSSL==22.1.0 ",
    "flask==2.2.2",
    "SQLAlchemy>=1.3.0",
    "py3DNS==3.2.1" ,
    "numpy==1.24.1",
    "terminable_thread==0.7.1",
    "PyYAML==6.0" ,
]

