[metadata]
name = nettacker
version = 0.0.3
author = OWASP
description = Automated Penetration Testing Framework - Open-Source Vulnerability Scanner - Vulnerability Management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OWASP/Nettacker
project_urls =
    Bug Tracker = https://github.com/OWASP/Nettacker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 license
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.0

[options.packages.find]
where = .